--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
 
   <div class="hero-img">
-    <img src="assests/profile.png" alt="Sruthi Bai" class="profile-pic">
+    <img src="profile.png" alt="Sruthi Bai" class="profile-pic">
   </div>
 </section>
 
@@ -93,7 +93,7 @@
   <p>
   <a href="https://linkedin.com/in/sruthi-bai-09a32925a" target="_blank">LinkedIn</a> |
   <a href="https://github.com/bedresruthi" target="_blank">GitHub</a> |
-  <a href="assests/sru_resume.pdf" target="_blank" download>Resume</a>
+  <a href="sru_resume.pdf" target="_blank" view>Resume</a>
 </p>
 </section>
 
@@ -104,3 +104,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
