--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="#about">About</a>
     <a href="#skills">Skills</a>
     <a href="#projects">Projects</a>
+    <a href="#gallery" class="nav-gallery">Gallery</a>
     <a href="#contact">Contact</a>
   </nav>
 </header>
@@ -44,8 +45,7 @@
   <h2>About Me</h2>
   <p>
     B.Tech Data Science student at Ravindra College of Engineering for Women
-    (CGPA: 9.0). Passionate about full-stack development, machine learning,
-    and building beautiful user experiences.
+    (CGPA: 9.0). Enthusiastic and motivated Data Science student with a strong foundation in Python, Java, Machine Learning, SQL, MySQL, HTML, CSS, JavaScript, React.js, and Node.js. Passionate about applying academic knowledge to real-world projects, contributing to full-stack development and data-driven solutions, and continuously growing as a technology professional. Known for strong problem-solving skills, adaptability, and a keen interest in learning new technologies.
   </p>
 
   <div class="facts">
@@ -72,19 +72,68 @@
 
   <div class="card">
     <h3>Hospital Management System</h3>
-    <p>Responsive system for patient records, appointments, and analytics.</p>
+    <p>
+      Responsive system for managing patient records, appointments, and analytics.
+    </p>
+    <p>
+      🔗 
+      <a href="https://github.com/bedresruthi/hospital-management-system" target="_blank">
+        GitHub Repository
+      </a>
+    </p>
   </div>
 
   <div class="card">
     <h3>E-Mart E-Commerce Website</h3>
-    <p>Full-stack application with authentication and order management.</p>
+    <p>
+      Full-stack e-commerce application with authentication and order management.
+    </p>
+    <p>
+      🔗 
+      <a href="https://github.com/bedresruthi/e-mart-ecommerce" target="_blank">
+        GitHub Repository
+      </a>
+    </p>
   </div>
 
   <div class="card">
     <h3>LLM-Based Translation System</h3>
-    <p>Real-time multilingual audio translation using transformer models.</p>
+    <p>
+      Real-time multilingual audio translation using transformer-based models.
+    </p>
+    <p>
+      🔗 
+      <a href="https://github.com/bedresruthi/llm-translation-system" target="_blank">
+        GitHub Repository
+      </a>
+    </p>
   </div>
 </section>
+
+<!-- ===== GALLERY ===== -->
+<section id="gallery" class="section dark">
+  <h2>Gallery</h2>
+  <p>My certifications, learning journey, and web projects.</p>
+
+  <div class="gallery-grid">
+    <div class="gallery-item">
+      <img src="pythonprogramming.png" alt="Python Programming Certificate">
+    </div>
+
+    <div class="gallery-item">
+      <img src="internship certificate.png" alt="Internship Certificate">
+    </div>
+
+    <div class="gallery-item">
+      <img src="webdevelopment.png" alt="Web Development Certificate">
+    </div>
+
+    <div class="gallery-item">
+      <img src="aws.png" alt="AWS Certificate">
+    </div>
+  </div>
+</section>
+
 
 <section id="contact" class="section">
   <h2>Contact</h2>
