--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </p>
 
     <div class="hero-buttons">
-      <a href="#projects" class="btn primary">View Projects</a>
+      <a href="sru_resume.pdf" class="btn primary">View resume</a>
       <a href="#contact" class="btn outline">Contact Me</a>
     </div>
   </div>
