--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
 <section id="about" class="section">
   <h2>About Me</h2>
   <p>
-    B.Tech Data Science student at Ravindra College of Engineering for Women
-    (CGPA: 9.0). Enthusiastic and motivated Data Science student with a strong foundation in Python, Java, Machine Learning, SQL, MySQL, HTML, CSS, JavaScript, React.js, and Node.js. Passionate about applying academic knowledge to real-world projects, contributing to full-stack development and data-driven solutions, and continuously growing as a technology professional. Known for strong problem-solving skills, adaptability, and a keen interest in learning new technologies.
-  </p>
+    I am a B.Tech Data Science student at Ravindra College of Engineering for Women, maintaining a strong academic record with a CGPA of 9.0. I have a deep interest in applying data science concepts and software engineering principles to solve real-world problems through technology. My academic journey has helped me build a solid foundation in Python, Java, Machine Learning, SQL, and Database Management, along with hands-on experience in full-stack web development using HTML, CSS, JavaScript, React.js, and Node.js.
 
+I have worked on multiple real-time and academic projects, including full-stack applications, data-driven systems, and AI-based solutions, which strengthened my understanding of both frontend and backend development. Alongside project work, I actively practice problem-solving and competitive programming, having solved 950+ problems on LeetCode, which has significantly improved my logical thinking, algorithmic skills, and coding efficiency.
+
+I am highly motivated, enthusiastic, and adaptable, with a strong desire to continuously learn and explore emerging technologies. I enjoy working in collaborative environments and contributing meaningfully to team goals. I am particularly passionate about building scalable, user-centric applications, leveraging data analytics and machine learning to deliver impactful solutions. My long-term goal is to grow as a technology professional by gaining industry exposure, improving my technical depth, and contributing to innovative and challenging projects.
+ </p>
   <div class="facts">
     <div>📍 Kurnool, Andhra Pradesh</div>
     <div>💻 950+ LeetCode Problems</div>
@@ -71,43 +73,47 @@
   <h2>Projects</h2>
 
   <div class="card">
-    <h3>Hospital Management System</h3>
-    <p>
-      Responsive system for managing patient records, appointments, and analytics.
-    </p>
-    <p>
-      🔗 
-      <a href="https://github.com/bedresruthi/hospital-management-system" target="_blank">
-        GitHub Repository
-      </a>
-    </p>
-  </div>
+  <h3>🏥Hospital Management System</h3>
+  <p>
+    Responsive system for managing patient records, appointments, and analytics.
+  </p>
+  <p><strong>Technologies:</strong> Java, MySQL, JDBC, MVC, HTML, CSS</p>
+  <p>
+    🔗 
+    <a href="https://github.com/bedresruthi/hospital-management-system" target="_blank">
+      GitHub Repository
+    </a>
+  </p>
+</div>
 
-  <div class="card">
-    <h3>E-Mart E-Commerce Website</h3>
-    <p>
-      Full-stack e-commerce application with authentication and order management.
-    </p>
-    <p>
-      🔗 
-      <a href="https://github.com/bedresruthi/e-mart-ecommerce" target="_blank">
-        GitHub Repository
-      </a>
-    </p>
-  </div>
+<div class="card">
+  <h3>🛒 E-Mart E-Commerce Website</h3>
+  <p>
+    Full-stack e-commerce application with authentication and order management.
+  </p>
+  <p><strong>Technologies:</strong> React.js, Node.js, Express.js, MongoDB, HTML, CSS, JavaScript</p>
+  <p>
+    🔗 
+    <a href="https://github.com/bedresruthi/e-mart-ecommerce" target="_blank">
+      GitHub Repository
+    </a>
+  </p>
+</div>
 
-  <div class="card">
-    <h3>LLM-Based Translation System</h3>
-    <p>
-      Real-time multilingual audio translation using transformer-based models.
-    </p>
-    <p>
-      🔗 
-      <a href="https://github.com/bedresruthi/llm-translation-system" target="_blank">
-        GitHub Repository
-      </a>
-    </p>
-  </div>
+<div class="card">
+  <h3>🌐LLM-Based Translation System</h3>
+  <p>
+    Real-time multilingual audio translation using transformer-based models.
+  </p>
+  <p><strong>Technologies:</strong> Python, Transformers, NLP, Speech-to-Text, Text-to-Speech, FastAPI</p>
+  <p>
+    🔗 
+    <a href="https://github.com/bedresruthi/llm-translation-system" target="_blank">
+      GitHub Repository
+    </a>
+  </p>
+</div>
+
 </section>
 
 <!-- ===== GALLERY ===== -->
